# SDL_svg

./: .gitignore  Makefile  Makefile.am  SDL_svg.h  configure.ac  internals.h  render.c  svgtest.c  svgtest.cpp
libsvg/: .gitignore  Makefile  Makefile.am  autogen.sh  configure.ac  svg_element.c  svg_parser.c
