lib_LIBRARIES = libsvg.a
libsvg_a_SOURCES = svg.c  svg_ascii.c  svg_attribute.c  svg_color.c  svg_element.c  svg_gradient.c  svg_group.c  svg_length.c  svg_paint.c  svg_parser.c  svg_path.c  svg_pattern.c  svg_str.c  svg_style.c  svg_text.c  svg_transform.c
libsvg_a_CFLAGS = `pkg-config --cflags xmlrpc`
